<resources>
    <string name="app_name">My Application</string>
    <string name="layout_1">Layout 1</string>
    <string name="textview">TextView</string>
    <string name="nextpagetext">nextpagetext</string>
    <string name="forum">討論區</string>
    <string name="contact_us">聯絡我們</string>
    <string name="AddMenu">添加食譜</string>
    <string name="MainMenu">主菜單</string>
    <string name="menuname">最新推介</string>
    <string name="recommand">今日推介</string>
    <string name="contactus_textview2">如有任何查詢和意見，歡迎聯絡我們\n\n致電\n請在辦公時間內 星期一至星期五 早上8:00至 晚上6:00 致電 (852) 2525-0000，方便由職員跟進。
        \n\n電郵地址\nscookingmenuapp@menucompany.com</string>
    <string name="submit">選圖</string>
    <string name="type_word_here">Type word here!</string>
    <string name="cookingmenuapps">CookingMenuApps</string>
    <string name="tryaddmenu">如果你有菜式想推介，不妨在以下位置先放入菜式圖片，再而按向右箭嘴進行下一步。\n\n 若想退出至主頁，請按下退出左上角迴旋箭嘴。</string>
    <string name="Material2">份量</string>
    <string name="Material">食材</string>
    <string name="thankword">感謝用戶提供菜式，你的菜式資料已被傳送到本公司客戶部審核。\n\n請按下迴旋箭嘴。</string>
    <string name="addmenu_step3">以下將會提供最大限度10個步驟。若少於10個步驟，餘下的步驟不用理會!</string>
    <string name="title_activity_new_food1">NewFood1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_new_food1_2">NewFood1_2</string>
    <string name="tab_text_1">簡介</string>
    <string name="tab_text_2">材料</string>
    <string name="tab_text_3">做法</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search">search</string>
    <string name="content">Content</string>
</resources>
