<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10"
            android:background="@drawable/cookingbgpic"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/AddMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="添加食譜_Step1"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/nextbutton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    app:srcCompat="@drawable/rightbutton" />

                <ImageView
                    android:id="@+id/turnback"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/turnback" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".90"
            android:background="@drawable/cookingbgpic2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.60"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tryaddmenu"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.40"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.20"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight=".20">

                        <EditText
                            android:id="@+id/menuname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="15"
                            android:inputType="textPersonName"
                            android:text="@string/menuname"
                            android:textSize="25sp"/>

                        <Button
                            android:id="@+id/submitbuttonpic1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="right"
                            android:text="@string/submit" />

                        <ImageView
                            android:id="@+id/addmenupic1"
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>